# first_project

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
dags/project1/: dag.py  dag_v2.py
